telecom-bretagne/javacompiler/SecondPhase/tests/Good/testArrayInit.java
class H {
	

	H(){
		int[][] x = new int[2][] ;
		x[0] = new int[3];
	}

}