telecom-bretagne/javacompiler/SecondPhase/tests/Fail/testArrayInitFail3.java
class H {
	

	H(){
		int[][][] x = new int[1][][]{{1,2},{1,2}} ;

	}

}